--- a/Services.NetCore.WebApi/appsettings.json
+++ b/Services.NetCore.WebApi/appsettings.json
@@ -1,13 +1,13 @@
 {
-  "ConnectionStrings": {
-    "DefaultConectionString": "server=localhost;port=3306;user=root;password=;database=bienesinmuebles"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MyDatabase;Integrated Security=SSPI;MultipleActiveResultSets=True;Application Name=EntityFramework;TrustServerCertificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
