--- a/Services.NetCore.WebApi/Services.NetCore.WebApi.csproj
+++ b/Services.NetCore.WebApi/Services.NetCore.WebApi.csproj
@@ -12,20 +12,22 @@
 	  <Content Include="Properties\launchSettings.json" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="EntityFramework" Version="6.4.4" />
 		<PackageReference Include="EPPlus" Version="7.0.10" />
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.3" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.10">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+			<TreatAsUsed>true</TreatAsUsed>
 		</PackageReference>
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-		<PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="8.102.2" />
+		<PackageReference Include="System.Security.Permissions" Version="8.0.0" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\Services.NetCore.Application\Services.NetCore.Application.csproj" />
 	  <ProjectReference Include="..\Services.NetCore.Crosscutting\Services.NetCore.Crosscutting.csproj" />
+	  <ProjectReference Include="..\Services.NetCore.Infraestructure\Services.NetCore.Infraestructure.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Migrations\" />
 	</ItemGroup>
 </Project>
