--- a/Services.NetCore.WebApi/appsettings.Development.json
+++ b/Services.NetCore.WebApi/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+    "ConnectionStrings": {
+        "DefaultConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=MyDatabase;Integrated Security=SSPI;MultipleActiveResultSets=True;Application Name=EntityFramework;TrustServerCertificate=True"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*"
 }
