--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,24 @@ MigrationBackup/
 FodyWeavers.xsd
 /Services.NetCore.WebApi/bin/Debug/net8.0/Services.NetCore.Application.dll
 /Services.NetCore.WebApi/bin/Debug/net8.0/Services.NetCore.WebApi.dll
+/Services.NetCore.WebApi/bin/*
+/Services.NetCore.WebApi/obj/*
+/Services.NetCore.Application/obj/Debug/net8.0/Services.NetCore.Application.AssemblyInfo.cs
+/Services.NetCore.Application/obj/Debug/net8.0/Services.NetCore.Application.AssemblyInfoInputs.cache
+/Services.NetCore.Application/obj/Debug/net8.0/Services.NetCore.Application.assets.cache
+/Services.NetCore.Crosscutting/obj/Debug/net8.0/Services.NetCore.Crosscutting.AssemblyInfo.cs
+/Services.NetCore.Crosscutting/obj/Debug/net8.0/Services.NetCore.Crosscutting.AssemblyInfoInputs.cache
+/Services.NetCore.Crosscutting/obj/Debug/net8.0/Services.NetCore.Crosscutting.assets.cache
+/Services.NetCore.Domain/obj/Debug/net8.0/Services.NetCore.Domain.AssemblyInfo.cs
+/Services.NetCore.Domain/obj/Debug/net8.0/Services.NetCore.Domain.AssemblyInfoInputs.cache
+/Services.NetCore.Domain/obj/Debug/net8.0/Services.NetCore.Domain.assets.cache
+/Services.NetCore.Infraestructure/obj/Debug/net8.0/Services.NetCore.Infraestructure.AssemblyInfo.cs
+/Services.NetCore.Infraestructure/obj/Debug/net8.0/Services.NetCore.Infraestructure.AssemblyInfoInputs.cache
+/Services.NetCore.Infraestructure/obj/Debug/net8.0/Services.NetCore.Infraestructure.assets.cache
+/Services.NetCore.Tests/obj/Debug/net8.0/Services.NetCore.Test.AssemblyInfo.cs
+/Services.NetCore.Tests/obj/Debug/net8.0/Services.NetCore.Test.AssemblyInfoInputs.cache
+/Services.NetCore.Tests/obj/Debug/net8.0/Services.NetCore.Test.assets.cache
+/Services.NetCore.WebApi/obj/Debug/net8.0/Services.NetCore.WebApi.AssemblyInfo.cs
+/Services.NetCore.WebApi/obj/Debug/net8.0/Services.NetCore.WebApi.AssemblyInfoInputs.cache
+/Services.NetCore.WebApi/obj/Debug/net8.0/Services.NetCore.WebApi.assets.cache
+/Services.NetCore.WebApi/obj/Debug/net8.0/Services.NetCore.WebApi.csproj.AssemblyReference.cache
